--- a/index.css
+++ b/index.css
@@ -7,3 +7,7 @@ body{
     font-family: 'Poppins';
     font-size: 150%;
     }
+    li{
+        display: inline-block;
+        padding: 20px;
+    }
