--- a/index.css
+++ b/index.css
@@ -11,3 +11,32 @@ body{
         display: inline-block;
         padding: 20px;
     }
+    .header{
+        background-color: #649549;
+    }
+    .section1{
+        margin: 50px;
+    }
+
+.together img{
+    float: left;
+    justify-content: space-around;
+    align-items: center;
+}
+.menu{
+    background-color: rgb(215, 245, 235);
+}
+#menucontent{
+    display: flex;
+   flex-direction: row;
+   flex-wrap: wrap;
+   justify-content: space-around;
+}
+.burgertype{
+    background-color: white;
+    border-style: none;
+    border-bottom-right-radius: 25px;
+    text-align: right;
+    padding: 10px;
+    margin: 70px;
+}
