--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@ body{
     
 }
 .menu{
-    background-color: rgb(215, 245, 235);
+    background-color: rgb(235, 235, 235);
 }
 #menucontent{
     display: flex;
@@ -40,13 +40,13 @@ body{
 .burgertype{
     background-color: white;
     border-style: none;
-    border-bottom-right-radius: 25px;
+    border-bottom-right-radius: 70px;
     text-align: right;
-    padding: 10px;
+    padding: 20px;
     margin: 70px;
 }
 .deals{
-    background-color:#C9ECB5 ;
+    background-color: #6CB840;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
