change spacing in deals section

--- a/index.css
+++ b/index.css
@@ -87,7 +87,7 @@ body{
 .deals{
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
     padding-bottom: 50px;
 }
 .contact{
